--- a/app/src/main/res/layout/activity_enrollitem.xml
+++ b/app/src/main/res/layout/activity_enrollitem.xml
@@ -25,7 +25,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.8"
+                android:layout_weight="0.5"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -40,22 +40,21 @@
                         android:layout_weight="1">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
                             android:text="EnrollId"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
-                            android:layout_weight="1"
-                            android:textSize="16dp"/>
+                            android:textSize="14sp"/>
 
                         <TextView
                             android:id="@+id/tv_enrollid"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="#000000"
                             android:gravity="center_vertical"
-                            android:layout_weight="1"
-                            android:textSize="16dp"/>
+                            android:textSize="14sp"/>
 
                     </LinearLayout>
 
@@ -66,22 +65,21 @@
                         android:layout_weight="1">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
                             android:text="BatchId"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
-                            android:layout_weight="1"
-                            android:textSize="16dp"/>
+                            android:textSize="14sp"/>
 
                         <TextView
                             android:id="@+id/tv_batchid"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
                             android:textColor="#000000"
-                            android:layout_weight="1"
-                            android:textSize="16dp"/>
+                            android:textSize="14sp"/>
 
                     </LinearLayout>
 
@@ -92,22 +90,21 @@
                         android:layout_weight="1">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
                             android:text="OrgId"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
-                            android:layout_weight="1"
-                            android:textSize="16dp"/>
+                            android:textSize="14sp"/>
 
                         <TextView
                             android:id="@+id/tv_orgnisationid"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
                             android:textColor="#000000"
-                            android:layout_weight="1"
-                            android:textSize="16dp"/>
+                            android:textSize="14sp"/>
 
                     </LinearLayout>
 
@@ -118,25 +115,24 @@
                         android:layout_weight="1">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
                             android:text="Days Left"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
-                            android:layout_weight="1"
-                            android:textSize="16dp"/>
+                            android:textSize="14sp"/>
 
                         <TextView
                             android:id="@+id/tv_daysleft"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
                             android:textColor="#000000"
-                            android:layout_weight="1"
-                            android:textSize="16dp"/>
+                            android:textSize="14sp"/>
 
                     </LinearLayout>
-                  
+
                 </LinearLayout>
 
                 <View
@@ -155,16 +151,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dp"
-                        android:layout_weight="2">
+                        android:layout_weight="2.4">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="CourseName"
-                            android:layout_marginRight="3dp"
+                            android:layout_marginRight="5dp"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
-                            android:textSize="16dp"/>
+                            android:textSize="14sp"/>
 
                         <TextView
                             android:id="@+id/tv_coursename"
@@ -172,7 +168,7 @@
                             android:layout_height="wrap_content"
                             android:textColor="#000000"
                             android:gravity="center_vertical"
-                            android:textSize="16dp"/>
+                            android:textSize="12sp"/>
 
                     </LinearLayout>
 
@@ -180,16 +176,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dp"
-                        android:layout_weight="4">
+                        android:layout_weight="3.8">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Actived Date"
-                            android:layout_marginRight="2dp"
+                            android:layout_marginRight="5dp"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
-                            android:textSize="16dp"/>
+                            android:textSize="14sp"/>
 
                         <TextView
                             android:id="@+id/tv_activateddate"
@@ -197,7 +193,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
                             android:textColor="#000000"
-                            android:textSize="16dp"/>
+                            android:textSize="12sp"/>
 
                     </LinearLayout>
 
@@ -205,16 +201,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="2dp"
-                        android:layout_weight="4">
+                        android:layout_weight="3.8">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="2dp"
+                            android:layout_marginRight="5dp"
                             android:text="End Date"
                             android:textColor="@color/green"
                             android:gravity="center_vertical"
-                            android:textSize="16dp"/>
+                            android:textSize="14sp"/>
 
                         <TextView
                             android:id="@+id/tv_enddate"
@@ -222,7 +218,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
                             android:textColor="#000000"
-                            android:textSize="16dp"/>
+                            android:textSize="12sp"/>
 
                     </LinearLayout>
 
@@ -234,16 +230,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center_horizontal"
-                android:layout_weight="9.2">
+                android:layout_weight="9.5">
 
                 <Button
                     android:id="@+id/btn_enrolldet"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="center_vertical|end"
                     android:background="@drawable/details1"/>
 
-          </LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
