--- a/app/src/main/res/layout/activity_enrollreqitem.xml
+++ b/app/src/main/res/layout/activity_enrollreqitem.xml
@@ -40,7 +40,7 @@
                         android:gravity="center_vertical"
                         android:text="EnrollId"
                         android:textColor="@color/green"
-                        android:textSize="16dp" />
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/tv_erenrollid"
@@ -49,7 +49,7 @@
                         android:layout_weight="1"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="16dp" />
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
@@ -66,7 +66,7 @@
                         android:gravity="center_vertical"
                         android:text="BatchId"
                         android:textColor="@color/green"
-                        android:textSize="16dp" />
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/tv_erbatchid"
@@ -75,7 +75,7 @@
                         android:layout_weight="1"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="16dp" />
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
@@ -92,7 +92,7 @@
                         android:gravity="center_vertical"
                         android:text="OrgId"
                         android:textColor="@color/green"
-                        android:textSize="16dp" />
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/tv_erorgnisationid"
@@ -101,7 +101,7 @@
                         android:layout_weight="1"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="16dp" />
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
@@ -118,7 +118,7 @@
                         android:gravity="center_vertical"
                         android:text="Amount"
                         android:textColor="@color/green"
-                        android:textSize="16dp" />
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/tv_eramount"
@@ -127,7 +127,7 @@
                         android:layout_weight="1"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="16dp" />
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
@@ -172,7 +172,7 @@
                         android:gravity="center_vertical"
                         android:text="CourseName"
                         android:textColor="@color/green"
-                        android:textSize="16dp" />
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/tv_ercoursename"
@@ -180,7 +180,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="16dp" />
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
@@ -197,7 +197,7 @@
                         android:gravity="center_vertical"
                         android:text="Req. Date"
                         android:textColor="@color/green"
-                        android:textSize="16dp" />
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/tv_erreqdate"
@@ -205,7 +205,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="16dp" />
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
@@ -222,7 +222,7 @@
                         android:gravity="center_vertical"
                         android:text="End Date"
                         android:textColor="@color/green"
-                        android:textSize="16dp" />
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/tv_erenddate"
@@ -230,7 +230,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="16dp" />
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
