--- a/app/src/main/res/layout-xlarge/activity_syncpopup.xml
+++ b/app/src/main/res/layout-xlarge/activity_syncpopup.xml
@@ -37,6 +37,7 @@
     </RadioGroup>
 
     <Button
+        android:id="@+id/btn_popupsync"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:text="Sync"
