--- a/app/src/main/res/layout-xlarge/activity_assesmenttestitem.xml
+++ b/app/src/main/res/layout-xlarge/activity_assesmenttestitem.xml
@@ -21,99 +21,95 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tv_atestid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
+                android:hint="testid"
+                android:layout_gravity="center_vertical"
+                android:textStyle="bold|italic"
+                android:textColor="@color/green"
                 android:layout_weight="1"
+                android:textSize="16sp"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dip"
+                android:layout_margin="2dp"
+                android:background="#747474"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:text="TestId"
                     android:layout_weight="1"
-                    android:textColor="@color/green"
-                    android:textStyle="bold"/>
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/tv_atestid"
+                    <ImageView
+                        android:id="@+id/iv_start"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/play"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Start" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="testid"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="#000000"
                     android:layout_weight="1"
-                    android:textSize="16sp"/>
+                    android:orientation="vertical">
 
-            </LinearLayout>
+                    <ImageView
+                        android:id="@+id/iv_review"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/review"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Review" />
+                </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/iv_start"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/play"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Play" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/iv_review"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/review"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Review" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:weightSum="2">
-
-                <TextView
-                    android:id="@+id/tv_ateststatus"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="teststatus"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="#000000"
                     android:layout_weight="1"
-                    android:textSize="12dp"/>
+                    android:weightSum="2">
 
-                <ImageView
-                    android:id="@+id/iv_atestdownload"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_file_download_black_36dp" />
+                    <TextView
+                        android:id="@+id/tv_ateststatus"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="teststatus"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="#000000"
+                        android:layout_weight="1"
+                        android:textSize="12dp"/>
+
+                    <ImageView
+                        android:id="@+id/iv_atestdownload"
+                        android:layout_width="match_parent"
+                        android:gravity="center_horizontal|center_vertical"
+                        android:layout_height="40dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_file_download_black_36dp" />
+
+                </LinearLayout>
 
             </LinearLayout>
-
 
         </LinearLayout>
 
