--- a/app/src/main/res/layout-large/activity_testitem.xml
+++ b/app/src/main/res/layout-large/activity_testitem.xml
@@ -87,9 +87,14 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
+                            android:background="@drawable/btn_details_bg"
                             android:text="Practice Test"
-                            android:textSize="20sp" />
+                            android:layout_margin="2dp"
+                            android:gravity="center"
+                            android:padding="3dp"
+                            android:textStyle="italic|bold"
+                            android:textSize="12sp"
+                            android:textColor="#FFFFFF"/>
 
                         <TextView
                             android:id="@+id/tv_testAttempt"
@@ -264,9 +269,14 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
+                            android:background="@drawable/btn_details_bg"
                             android:text="Flash Card"
-                            android:textSize="20sp" />
+                            android:layout_margin="2dp"
+                            android:gravity="center"
+                            android:padding="3dp"
+                            android:textStyle="italic|bold"
+                            android:textSize="12sp"
+                            android:textColor="#FFFFFF"/>
 
                         <TextView
                             android:id="@+id/tv_flashAttempt"
