--- a/app/src/main/res/layout/activity_db.xml
+++ b/app/src/main/res/layout/activity_db.xml
@@ -39,6 +39,7 @@
             android:layout_margin="3dp"
             android:layout_weight="8.5"
             android:text="My Courses"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:background="@drawable/btn_details_bg"
             android:textColor="#FFFFFF"
