--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,7 @@
                             android:layout_height="wrap_content"
                             android:background="@drawable/custom_button"
                             android:textColor="@drawable/custom_text"
-                            android:layout_margin="20dp"
+                            android:layout_margin="12dp"
                             android:padding="12dp"
                             android:text="Login"/>
 
@@ -96,7 +96,7 @@
                             android:layout_margin="20dp"
                             android:text="No account yet? Create one"
                             android:gravity="center"
-                            android:textSize="16dip"/>
+                            android:textSize="16sp"/>
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
