--- a/app/src/main/res/layout/activity_testitem.xml
+++ b/app/src/main/res/layout/activity_testitem.xml
@@ -199,6 +199,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:id="@+id/ll_start"
                             android:orientation="horizontal">
 
                             <ImageView
@@ -221,6 +222,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:id="@+id/ll_resume"
                             android:orientation="horizontal">
 
                             <ImageView
@@ -243,6 +245,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:id="@+id/ll_review"
                             android:orientation="horizontal">
 
                             <ImageView
