--- a/app/src/main/res/layout/activity_assesmenttestitem.xml
+++ b/app/src/main/res/layout/activity_assesmenttestitem.xml
@@ -135,7 +135,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Play" />
+                        android:text="Start" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -169,14 +169,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="teststatus"
-                        android:layout_gravity="center"
+                        android:layout_gravity="center_vertical"
                         android:textColor="#000000"
                         android:layout_weight="1"
                         android:textSize="12dp"/>
 
                     <ImageView
-                        android:id="@+id/cb_atestselection"
+                        android:id="@+id/iv_atestdownload"
                         android:layout_width="match_parent"
+                        android:gravity="center_horizontal|center_vertical"
                         android:layout_height="40dp"
                         android:layout_weight="1"
                         android:src="@drawable/ic_file_download_black_36dp" />
