--- a/app/src/main/res/layout/activity_testitem.xml
+++ b/app/src/main/res/layout/activity_testitem.xml
@@ -77,6 +77,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:layout_marginEnd="5dp"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -283,6 +284,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginStart="5dp"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -295,8 +297,8 @@
                             android:layout_height="wrap_content"
                             android:background="@drawable/btn_details_bg"
                             android:text="Flash Card"
-                            android:gravity="center"
                             android:layout_margin="2dp"
+                            android:gravity="center"
                             android:padding="3dp"
                             android:textStyle="italic|bold"
                             android:textSize="12sp"
@@ -397,6 +399,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
+                        android:id="@+id/ll_fstart"
                         android:orientation="horizontal">
 
                         <ImageView
