--- a/app/src/main/res/layout/activity_listof_servers.xml
+++ b/app/src/main/res/layout/activity_listof_servers.xml
@@ -29,6 +29,17 @@
             android:visibility="gone"
             />
 
+        <Button
+            android:id="@+id/btn_setserver"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            android:padding="3dp"
+            android:text="Set As Server"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:background="@drawable/btn_details_bg"/>
+
     </LinearLayout>
 
 </LinearLayout>
