--- a/app/src/main/res/layout-large/activity_score.xml
+++ b/app/src/main/res/layout-large/activity_score.xml
@@ -433,37 +433,30 @@
                             android:layout_marginStart="10dp"
                             android:textColor="@android:color/black"
                             android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/tv_totalPercentage_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_totalScore_label"
+                            android:layout_marginStart="10dp"
+                            android:text="Total Percentage : "
+                            android:textColor="@android:color/black"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+
+                        <TextView
+                            android:id="@+id/tv_totalPercentage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_totalScore_label"
+                            android:layout_marginStart="10dp"
+                            android:layout_toEndOf="@id/tv_totalPercentage_label"
+                            android:textColor="@android:color/black"
+                            android:textSize="20sp" />
                     </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/tv_totalPercentage_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/tv_totalScore_label"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="5dp"
-                        android:text="Total Percentage : "
-                        android:textColor="@android:color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-
-                    <TextView
-                        android:id="@+id/tv_totalPercentage"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/tv_totalScore_label"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_toEndOf="@id/tv_totalPercentage_label"
-                        android:textColor="@android:color/black"
-                        android:textSize="20sp" />
-                </LinearLayout>
                 </LinearLayout>
 
 
@@ -492,6 +485,7 @@
                             android:layout_width="fill_parent"
                             android:layout_height="fill_parent"
                             android:id="@+id/row_header"
+                            android:background="@color/transp_green"
                             android:weightSum="7">
 
                             <TextView
@@ -508,8 +502,8 @@
                                 android:layout_height="match_parent"
                                 android:layout_marginStart="2dp"
                                 android:layout_marginEnd="2dp"
-                                android:textColor="@android:color/black"
                                 android:background="#000000" />
+
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -582,7 +576,7 @@
                                 android:gravity="center"
                                 android:textSize="20sp"
                                 android:textColor="@android:color/black"
-                                android:text="WrongAns"/>
+                                android:text="Wrongs"/>
 
                             <View
                                 android:layout_width="2dp"
